[gd_scene load_steps=5 format=3 uid="uid://dngddm2bsj5wi"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_121cx"]
[ext_resource type="PackedScene" uid="uid://cqmedomfp5mn4" path="res://scenes/background.tscn" id="2_lixth"]
[ext_resource type="Texture2D" uid="uid://bf5rn8o27cxsq" path="res://materials/png/background.png" id="3_aqh1v"]
[ext_resource type="Theme" uid="uid://boiyof61hkrhc" path="res://materials/theme/theme.tres" id="4_vi8hg"]

[node name="Menu" type="CanvasLayer"]

[node name="Background" type="Node3D" parent="."]

[node name="BackgroundScene" parent="Background" instance=ExtResource("2_lixth")]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="Background/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Background/SubViewportContainer/SubViewport"]
transform = Transform3D(0.999976, -0.00699871, 0, 0.00699871, 0.999976, 0, 0, 0, 1, 0, 0, 0)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_121cx")

[node name="Background2" type="Sprite2D" parent="Control"]
position = Vector2(955, 533.5)
scale = Vector2(0.948869, 0.970149)
texture = ExtResource("3_aqh1v")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -429.0
offset_top = -491.5
offset_right = 430.0
offset_bottom = 317.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="Titel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_vi8hg")
theme_override_font_sizes/font_size = 80
text = "Oxygen Odysee"

[node name="MusicVolume" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_vi8hg")
theme_override_font_sizes/font_size = 20
text = "Music Volume"
horizontal_alignment = 1
autowrap_mode = 2

[node name="musicVolume" type="HSlider" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_vi8hg")
max_value = 1.0
step = 0.01
value = 1.0

[node name="FXVolume" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_vi8hg")
theme_override_font_sizes/font_size = 20
text = "FX Volume"
horizontal_alignment = 1
autowrap_mode = 2

[node name="fxVolume" type="HSlider" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_vi8hg")
max_value = 1.0
step = 0.01
value = 1.0

[node name="Control2" type="Control" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="Control/MarginContainer/VBoxContainer/Control2"]
layout_mode = 2
offset_left = 224.0
offset_top = 37.0
offset_right = 514.0
offset_bottom = 121.0
size_flags_horizontal = 0
theme = ExtResource("4_vi8hg")
text = "back"

[connection signal="mouse_exited" from="Control/MarginContainer/VBoxContainer/musicVolume" to="Control" method="_on_slider_update"]
[connection signal="mouse_exited" from="Control/MarginContainer/VBoxContainer/fxVolume" to="Control" method="_on_slider_update"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Control2/Back" to="Control" method="_on_back_pressed"]
